[tool.poetry]
name = "credit-risk-modeling"
version = "0.1.0"
description = "Repo including principals credit risk algos and applications"
authors = ["Salvatore Albore <salvatore.albore@gmail.com>"]
packages = [{include="src"}]

[tool.poetry.dependencies]
python = "==3.9.12"
numpy = "^1.23.4"
pandas = "^1.5.1"
streamlit = "^1.15.1"
matplotlib = "^3.6.2"
seaborn = "^0.12.2"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
